<resources>
    <string name="app_name">Moshey</string>
    <string name="different_location_images">Different Location Images</string>
    <string name="book_a_train">Book A Train</string>
    <string name="my_tickets">My Tickets</string>
    <string name="book">Book</string>
    <string name="book_title">Book A Ticket</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="ticked_id">Ticked Id.</string>
    <string name="departure_time">Departure Time</string>
    <string name="tickets_remaining">Tickets Remaining</string>
    <string name="tickets_unavailable">No Tickets Available</string>
    <string name="no_new_tickets">No New Tickets</string>
    <string name="no_booked_tickets">No Booked Tickets</string>
    <string name="date">Date</string>
    <string name="moshey">Moshey is a Train Booking application still under beta testing Moshey.inc 2019</string>
    <string name="moshey_intro">Moshey is a train booking application that tailors your experience to with reliable transport booking services.</string>
    <string name="team">Team</string>
    <string name="more_info_soon">More Info Soon...</string>
</resources>
