<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:clipToPadding="false"
        android:minHeight="150dp"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/text_view_from_title"
                style="@style/Moshey.Title"
                android:text="@string/from"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_from"
                style="@style/Moshey.Subtext"
                app:layout_constraintLeft_toLeftOf="@id/text_view_from_title"
                app:layout_constraintTop_toBottomOf="@+id/text_view_from_title"
                tools:text="Nairobi" />

            <TextView
                android:id="@+id/text_view_to_title"
                style="@style/Moshey.Title"
                android:text="@string/to"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_to"
                style="@style/Moshey.Subtext"
                app:layout_constraintRight_toRightOf="@id/text_view_to_title"
                app:layout_constraintTop_toBottomOf="@+id/text_view_to_title"
                tools:text="Mombasa" />


            <TextView
                android:id="@+id/text_view_ticket_remaining_title"
                style="@style/Moshey.Title"
                android:text="@string/tickets_remaining"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_to" />

            <TextView
                android:id="@+id/text_view_ticket_remaining"
                style="@style/Moshey.Subtext"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_ticket_remaining_title"
                tools:text="40" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_book_ticket"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@drawable/moshey_button_style"
                android:backgroundTint="@color/color_secondary"
                android:text="@string/book"
                android:textColor="?attr/colorOnSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_ticket_remaining" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>